# capital_lens

./: .env.example  .gitignore  README.md  Taskfile.yml  biome.json  drizzle.config.local.ts  drizzle.config.prod.ts  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.typecheck.json  vitest.config.ts  wrangler.toml
.storybook/: main.ts  preview.tsx
app/: globals.css
components/blocks/symbol/: types.ts
components/blocks/symbol/client/: symbol-chart-panel.stories.tsx  symbol-chart-panel.tsx
components/blocks/symbol/server/: symbol-chart-block.tsx
components/ui/: button.stories.tsx
db/migrations/: date_20260306_initial_schema.sql
db/seeds/: testdata.sql
docs/: database.md  edinet_data_collection_plan.md  frontend-design-system.md
scripts/: check-component-layers.mjs
server/: README.md  pyproject.toml  sitecustomize.py
server/srcs/capital_lens_ingest/: __init__.py  cli.py  models.py
server/srcs/capital_lens_ingest/infrastructure/: __init__.py  d1.py  edinet.py  jpx.py  rate_control.py  sql.py  utils.py  yfinance_client.py
server/srcs/capital_lens_ingest/jobs/: __init__.py  daily.py  edinet.py  helpers.py  prices.py  splits.py  symbols.py
server/tests/integration/: test_d1_local_upsert.py  test_d1_target_branching.py
server/tests/unit/: test_cli_env_loading.py  test_edinet_paths.py  test_jpx_transform.py  test_rate_control.py  test_sql_builders.py  test_yfinance_normalize.py  test_yfinance_rate_limit.py
tests/: setup.ts
tests/charts/: box-plot.test.ts  chart-components.test.tsx  sankey.test.ts  waterfall.test.ts
(+29 files in other folders)
